refactor: hasNext 로직 수정